--- a/greybox/sass/_palette.scss
+++ b/greybox/sass/_palette.scss
@@ -9,108 +9,94 @@
       .tile-category{
         color:$linkhovercolor;
         border-bottom:1px solid $linkhovercolor;
-//        @include transition;
+        @include transition;
       }
     }
     .tile-category{
       color:$textcolor;
       border-bottom:1px dotted $textcolor;
-//      @include transition;
+      @include transition;
     }
   }
 }
-
 .palette-grey05 {
   color: #f6f6f6;
   &.palette-inverse {
     background-color: #f6f6f6;
   }
 }
-
 .palette-grey10 {
   color: #ebebeb;
   &.palette-inverse {
     background-color: #ebebeb;
   }
 }
-
 .palette-grey15 {
   color: #dedede;
   &.palette-inverse {
     background-color: #dedede;
   }
 }
-
 .palette-grey20 {
   color: #cfcfcf;
   &.palette-inverse {
     background-color: #cfcfcf;
   }
 }
-
 .palette-grey30 {
   color: #acacac;
   &.palette-inverse {
     background-color: #acacac;
   }
 }
-
 .palette-grey40 {
   color: #999999;
   &.palette-inverse {
     background-color: #999999;
   }
 }
-
 .palette-grey50 {
   color: #7c7c7c;
   &.palette-inverse {
     background-color: #7c7c7c;
   }
 }
-
 .palette-grey60 {
   color: #6b6b6b;
   &.palette-inverse {
     background-color: #6b6b6b;
   }
 }
-
 .palette-grey70 {
   color: #5b5b5b;
   &.palette-inverse {
     background-color: #5b5b5b;
   }
 }
-
 .palette-grey80 {
   color: $grey80;
   &.palette-inverse {
     background-color: $grey80;
   }
 }
-
 .palette-blue {
   color: #5B5868;
   &.palette-inverse {
     background-color: #5B5868;
   }
 }
-
 .palette-red {
   color: #685858;
   &.palette-inverse {
     background-color: #685858;
   }
 }
-
 .palette-warmgrey {
   color: #686258;
   &.palette-inverse {
     background-color: #686258;
   }
 }
-
 .palette-coral {
   color: #f04e55;
   &.palette-inverse {
@@ -129,28 +115,72 @@
     background-color: #6d2330;
   }
 }
-
 .palette-grey {
   color: #b0aca8;
   &.palette-inverse {
     background-color: #b0aca8;
   }
 }
-
 .palette-lime {
   color: #6b8c4c;
   &.palette-inverse {
     background-color: #80c342;
   }
 }
-
 .palette-navy {
-  color: #37477D;
+  color: $navy;
   &.palette-inverse {
-    background-color: #37477D;
+    background-color: $navy;
   }
 }
-
+.palette-teal {
+  color: $teal;
+  &.palette-inverse {
+    background-color: $teal;
+  }
+}
+.palette-teal2 {
+  color: $teal2;
+  &.palette-inverse {
+    background-color: $teal2;
+  }
+}
+.palette-lavender {
+  color: $lavender;
+  &.palette-inverse {
+    background-color: $lavender;
+  }
+}
+.palette-olivegrey {
+  color: $olivegrey;
+  &.palette-inverse {
+    background-color: $olivegrey;
+  }
+}
+.palette-purple {
+  color: #8385c3;/*565894 8385c3*/
+  &.palette-inverse {
+    background-color: #8385c3;
+  }
+}
+.pallette-lavender-vib{
+  color: $lavender-vib;
+  &.palette-inverse {
+    background-color: $lavender-vib;
+  }
+}
+.palette-orange {
+  color: #C75134;
+  &.palette-inverse {
+    background-color: #C75134;
+  }
+}
+.palette-gold {
+  color: #f5c429;
+  &.palette-inverse {
+    background-color: #f5c429;
+  }
+}
 .palette-inverse {
   color: #fff;
   -webkit-font-smoothing: antialiased;
@@ -158,57 +188,11 @@
     color: #fff;
   }
 }
-
 a.palette-inverse {
   &:hover, &:focus {
     color: #fff;
   }
 }
-.palette-teal {
-  color: #7ea29a;
-  &.palette-inverse {
-    background-color: #7ea29a;
-  }
-}
-.palette-teal2 {
-  color: #7DB9B3;
-  &.palette-inverse {
-    background-color: #7DB9B3;
-  }
-}
-.palette-lavender {
-  color: #BFC3EC;
-  &.palette-inverse {
-    background-color: #BFC3EC;
-  }
-}
-.palette-olivegrey {
-  color: #62645c;
-  &.palette-inverse {
-    background-color: #62645c;
-  }
-}
-.palette-purple {
-  color: #565894;
-  &.palette-inverse {
-    background-color: #565894;
-  }
-}
-.pallette-lavender-vib{
-  color: #8385c3;
-  &.palette-inverse {
-    background-color: #8385c3;
-  }
-}
-.palette-orange {
-  color: #C75134;
-  &.palette-inverse {background-color: #C75134;}
-}
-.palette-gold {
-  color: #f5c429;
-  &.palette-inverse {background-color: #f5c429;}
-}
-
 .palette-inverse{
   .read-more{
     border:1px solid white;
