--- a/greybox/sass/_prime.scss
+++ b/greybox/sass/_prime.scss
@@ -4,17 +4,16 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-family: $font-family-sans-serif;
+  font-size: $font-size-base;
   line-height: 1.7857142857142858;
   //1.4857142857142858 , 1.2857142857142858
   color: $textcolor ;
   background-color: $bodycolor;
 }
-$footer-height: 250px;
 .wrapper{
   background-color: $bodycolor;
-  margin-bottom:$footer-height;
+//  margin-bottom:$footer-height;
   z-index:1;
   padding-bottom:20px;
 }
@@ -149,7 +148,7 @@ hr {
 }
 
 .page-header {
-  padding-bottom: 8px;
+  padding-bottom: $gutter;
   margin: 36px 0 18px;
   border-bottom: 1px solid #ededed;
 }
@@ -198,7 +197,7 @@ dd {
   margin-left: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .dl-horizontal {
     dt {
       float: left;
@@ -289,7 +288,7 @@ blockquote {
 output {
   display: block;
   padding-top: 7px;
-  font-size: 14px;
+  font-size: $font-size-base;
   line-height: 1.2857142857142858;
   color: #b0aca8;
   vertical-align: middle;
@@ -787,7 +786,7 @@ input {
   padding: 5px 0;
   margin: 2px 0 0;
   list-style: none;
-  font-size: 14px;
+  font-size: $font-size-base;
   background-color: transparent;
   border: 1px solid #ccc;
   border: 1px solid transparent;
@@ -801,7 +800,7 @@ input {
   }
   .divider {
     height: 1px;
-    margin: 8px 0;
+    margin: $gutter 0;
     overflow: hidden;
     background-color: #e5e5e5;
   }
@@ -891,7 +890,7 @@ input {
   margin-bottom: 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto;
@@ -1020,7 +1019,7 @@ a.list-group-item {
   }
   .nav-divider {
     height: 1px;
-    margin: 8px 0;
+    margin: $gutter 0;
     overflow: hidden;
     background-color: #e5e5e5;
   }
@@ -1087,7 +1086,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .nav-tabs.nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -1097,7 +1096,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .nav-tabs.nav-justified > {
     li > a {
       border-bottom: 1px solid #ddd;
@@ -1155,7 +1154,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -1181,7 +1180,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .nav-tabs-justified > {
     li > a {
       border-bottom: 1px solid #ddd;
@@ -1248,7 +1247,7 @@ a.list-group-item {
   list-style: none;
 }
 
-@font-face {
+/*@font-face {
   font-family: "Helvetica-Neue";
   font-style: normal;
   font-weight: 200;
@@ -1272,7 +1271,7 @@ a.list-group-item {
   font-weight: 700;
   src: url("../fonts/c07fef9e-a934-42d7-92ad-69205f2b8a00.eot?#iefix");
   src: url("../fonts/c07fef9e-a934-42d7-92ad-69205f2b8a00.eot?#iefix") format("eot"), url("../fonts/14ff6081-326d-4dae-b778-d7afa66166fc.woff") format("woff"), url("../fonts/8fda1e47-19be-46c7-8d83-8d4fb35572f0.ttf") format("truetype"), url("../fonts/f751c8ae-1057-46d9-8d74-62592e002568.svg#f751c8ae-1057-46d9-8d74-62592e002568") format("svg");
-}
+}*/
 
 /*CHANGED TO WRAPPER*/
 .wrapper {
@@ -1283,7 +1282,7 @@ a.list-group-item {
   width: 100%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .wrapper {
     padding: 75px 18px 6px;
     -webkit-transition: padding .2s ease;
@@ -1305,7 +1304,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $break-medium) {
   .wrapper {
     padding-left: 22px;
     padding-right: 22px;
@@ -1323,7 +1322,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 1380px) {
+@media (min-width: $break-large) {
   .wrapper {
     padding-left: 34px;
     padding-right: 34px;
@@ -1391,7 +1390,7 @@ a {
 }
 
 .intro, .callout {
-  font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: $font-family-sans-serif;
   line-height: 1.1;
   color: inherit;
   font-size: 24px;
@@ -1421,7 +1420,7 @@ a {
   margin-bottom: 48px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .callout, .intro {
     font-size: 22px;
     line-height: 1.0909090909090908;
@@ -1457,7 +1456,7 @@ a {
   display: block;
   content: ' ';
   height: 1px;
-  margin: 36px 8px;
+  margin: 36px $gutter;
   overflow: hidden;
 }
 
@@ -1483,7 +1482,7 @@ a {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .cta {
     background: rgba(0, 0, 0, 0.2);
     border-radius: 20px;
@@ -1491,7 +1490,7 @@ a {
   }
   .overlap-sm {
     position: relative;
-    margin-top: -36px;
+    margin-top: $overlap;
     z-index: 2;
   }
   .underlap-sm {
@@ -1500,9 +1499,9 @@ a {
     + .row.module-hero {
       .picturefill-large {
         clear: both;
-        margin-bottom: -36px;
+        margin-bottom: $overlap;
         position: relative;
-        top: -36px;
+        top: $overlap;
         z-index: -1;
       }
       .tile-title {
@@ -1512,7 +1511,7 @@ a {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $break-medium) {
   .cta {
     font-size: 12px;
     padding: 8px 9px 7px 10px;
@@ -1521,7 +1520,7 @@ a {
   }
   .overlap-lg {
     position: relative;
-    margin-top: -36px;
+    margin-top: $overlap;
     z-index: 2;
   }
   .underlap-lg {
@@ -1530,9 +1529,9 @@ a {
     + .row.module-hero {
       .picturefill-large {
         clear: both;
-        margin-bottom: -36px;
+        margin-bottom: $overlap;
         position: relative;
-        top: -36px;
+        top: $overlap;
         z-index: -1;
       }
       .tile-title {
@@ -1606,7 +1605,7 @@ a {
   .job-listings {
     padding: 0;
     margin-bottom: 20px;
-    margin-top: 8px;
+    margin-top: $gutter;
   }
   .job-listing {
     padding: 0;
@@ -1617,7 +1616,7 @@ a {
     letter-spacing: .005em;
     line-height: 1.2857142857142858;
     color: #111;
-    font-size: 14px;
+    font-size: $font-size-base;
     font-weight: 200;
     &:hover {
       text-decoration: underline;
@@ -1629,7 +1628,7 @@ a {
   }
   .job-department {
     margin: 0 0 5px 0;
-    font-size: 14px;
+    font-size: $font-size-base;
     opacity: .6;
     font-weight: 200;
   }
@@ -1667,7 +1666,7 @@ a {
 
 .job-details {
   padding-left: 16px;
-  font-size: 14px;
+  font-size: $font-size-base;
 }
 
 .page-opening-details {
@@ -1701,7 +1700,7 @@ a {
 
 .page-people {
   .intro {
-    font-size: 14px;
+    font-size: $font-size-base;
     font-weight: 200;
     letter-spacing: .005em;
     line-height: 1.2857142857142858;
@@ -1826,12 +1825,12 @@ a {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .page-ideas .tile-hybrid.tile-medium .tile-title {
-    font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: $font-family-sans-serif;
     line-height: 1.1;
     color: inherit;
-    font-size: 14px;
+    font-size: $font-size-base;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.125;
@@ -1863,7 +1862,7 @@ a {
     display: block;
   }
   .page-case-study {
-    font-size: 14px;
+    font-size: $font-size-base;
     line-height: 1.5;
   }
   .page-perspective .module-hero + .module-hero, .page-how-we-work .module-hero + .module-hero {
@@ -1910,7 +1909,7 @@ a {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $break-medium) {
   .page-ideas .tile-hybrid.tile-medium .tile-title {
     font-size: 22px;
     line-height: 1.0909090909090908;
@@ -1938,12 +1937,12 @@ a {
   }
 }
 
-@media (min-width: 1380px) {
+@media (min-width: $break-large) {
   .page-location .tile-hybrid {
     min-height: 438px;
   }
   .page-perspective .module-content .module-title, .page-how-we-work .module-content .module-title, .page-perspective .module-extended .container, .page-how-we-work .module-extended .container {
-    padding-right: 41.66666666666667%;
+    padding-right: $col-5;
   }
   .page-perspective .module-extended, .page-how-we-work .module-extended {
     margin: -18px -34px 18px;
@@ -1967,7 +1966,7 @@ a {
 
 .video-ideas {
   margin-bottom: 40px;
-  margin-right: 41.66666666666667%;
+  margin-right: $col-5;
   iframe {
     height: 240px;
   }
@@ -1988,7 +1987,7 @@ a {
   }
 }
 
-@media (min-width: 1380px) {
+@media (min-width: $break-large) {
   .video-ideas iframe {
     height: 460px;
   }
