--- a/greybox/sass/_blog.scss
+++ b/greybox/sass/_blog.scss
@@ -71,7 +71,7 @@
   .promo{
     padding:0px;
     position:relative;
-     &> div{padding:50px 20px;}
+    div{padding:20px;}
     p{
       background-color: $grey80;
       border-bottom: none;
