--- a/greybox/sass/_module.scss
+++ b/greybox/sass/_module.scss
@@ -222,7 +222,7 @@ ul{
 
 
 
-@media (min-width: $break-medium) {
+@media (min-width: 992px) {
   .module-hero {
     margin-left: -22px;
     margin-right: -22px;
