--- a/greybox/sass/global.scss
+++ b/greybox/sass/global.scss
@@ -3,10 +3,9 @@
 @import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=5cff4beb-9d80-4122-b00d-c4420417aa8e");
 @import 'warning';
 @import 'reset';
-@import 'variables';
 @import 'bootstrap';
 @import 'icon';
-//@import 'colors';
+@import 'colors';
 @import 'prime';
 @import 'module';
 @import 'tile';
@@ -26,4 +25,3 @@
 @import 'mixins';
 //@import 'flat';
 //@import 'flat-fonts';
-@import 'embed';
