--- a/greybox/sass/_social.scss
+++ b/greybox/sass/_social.scss
@@ -1,15 +1,27 @@
 //_social.scss
-.social:before{
-  background: #d2d0cd;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  display: block;
-  content: ' ';
-  height: 1px;
-  margin: 36px 0px;
-  overflow: hidden;
-  width: 25%;
+.social{
+  &:before{
+    background: #d2d0cd;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    content: ' ';
+    height: 1px;
+    margin: 36px 0px;
+    overflow: hidden;
+    width: 25%;
+  }
+  &:after{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    content: ' ';
+    height: 1px;
+    margin: 18px 0px;
+    width: 25%;
+  }
 }
 .social span{
   margin-right: 20px;
